Added directory API
`cmu.directory.findAndrewId( string )` now returns an object containing
information about the individual with the matched andrew ID.

Also updated method naming scheme from “getX” to “findY”, where Y is
the parameter.

--- a/sample.html
+++ b/sample.html
@@ -13,7 +13,7 @@
       secret: "rtRPuoJZeGT5yiKQH6mFt9LZ1zMWFPb4z9olkJspfnPDygWukK_vjWuP"
     })
 
-    console.log(cmu.schedule.getCourse("15251", "S14"));
+    console.log(cmu.schedule.findCourse("15251", "S14"));
 
   </script>
 
